--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@formatjs/intl-relativetimeformat": "^11.4.10",
+    "@react-pdf/renderer": "^3.2.0",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -26,9 +27,13 @@
     "next": "13.4.2",
     "next-intl": "^3.26.5",
     "numbro": "^2.5.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^2.16.105",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-pdf": "^7.7.3",
     "rxjs": "^7.8.2",
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2",
