--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_URL=https://api.prod.com
 NEXT_PUBLIC_ENV=prod
 NEXT_PUBLIC_WS_URL=wss://api.prod.com/v1/websocket/connect
-NEXT_PUBLIC_SITE_URL=https://www.prod.com
+NEXT_PUBLIC_SITE_URL=https://vercel.com/paojiaos-projects/20250317
